# finance-buy-or-rent

./: .bumpversion.cfg  .copier-answers.yml  .flake8  .pre-commit-config.standard.yaml  README.md  pyproject.toml
.copilot/: copilot-codegen-instructions.md
.devcontainer/: devcontainer.json
docs/: user_guide.md
notebooks/: compro_o_affitto_2.ipynb  example_notebook.ipynb
src/comproaffitto/: core.py
tests/: test_comproaffitto.py
