[tool.poetry]
name = "comproaffitto"
version = "0.0.0"
description = "Comparatore per capire se è meglio compare o affittare"
authors = [
  "Simone Gaiarin <simgunz@gmail.com>"
]
license = "MIT license"
packages = [{include = "comproaffitto", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
numpy = "^2.2.2"
pandas = "^2.2.3"
plotly = "^5.24.1"
numpy-financial = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
flake8-builtins = "^2.1.0"
pep8-naming = "^0.13.3"
pytest-mock = "^3.11.1"
flake8-pytest-style = "^1.7.2"
flake8-print = "^5.0.0"
flake8-eradicate = "^1.5.0"
flake8-bugbear = "^23.9.16"
flake8-annotations = "^3.0.1"
black = "^22.1.0"
isort = "^5.12.0"
pre-commit = "^3.4.0"
pydocstyle = "^6.3.0"
bump2version = "^1.0.1"
detect-secrets = "^1.4.0"
ipykernel = "^6.29.4"
nbdime = "^4.0.1"

[tool.poetry.group.jupyterlab]
optional = true
dependencies = { jupyterlab = "^4.2.2"}

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D100,D103,D104"
convention = "google"

[tool.pytest.ini_options]
pythonpath = "src"
